--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env file example
-API_KEY=eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIzZjMwMDEzNTNAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.MaR6S0ET-BaJsbj9wGzvmFoTN-q1UM05pKwIibXN-AI
+API_KEY="eyJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6IjIzZjMwMDEzNTNAZHMuc3R1ZHkuaWl0bS5hYy5pbiJ9.MaR6S0ET-BaJsbj9wGzvmFoTN-q1UM05pKwIibXN-AI"
